--- a/assets/css/lecxa_admin.scss
+++ b/assets/css/lecxa_admin.scss
@@ -686,6 +686,61 @@ input[type=textarea]:not(.browser_default):focus:not([readonly])+label{
 }
 
 
+.cursos-data{
+	display: flex;
+	background: #fcfcfc;
+	padding: 10px;
+	justify-content:space-between;
+	align-items:center;
+	border:1px solid $main;
+	margin-bottom: 10px;
+	border-radius: 6px;
+
+	h5{
+		margin:0;
+		padding: 0;
+		font-size: 18px;
+	}
+	span:hover{
+		color: $accent;
+	}
+
+	span{
+		cursor: pointer;
+
+	}
+}
+
+.experiencia-data{
+	display: flex;
+	background: #fcfcfc;;
+	padding: 10px;
+	justify-content:space-between;
+	align-items:center;
+	border:1px solid $accent;
+	margin-bottom: 10px;
+	border-radius: 6px;
+
+	h5{
+		margin:0;
+		padding: 0;
+		font-size: 18px;
+	}
+	span:hover{
+		color: $accent;
+	}
+
+	span{
+		cursor: pointer;
+
+	}
+
+	p{
+		margin:0;
+		padding: 0;
+	}
+}
+
 
 
 
