--- a/assets/css/lecxa_admin.css
+++ b/assets/css/lecxa_admin.css
@@ -39,6 +39,11 @@ main {
   background-size: cover !important;
   background-position: center !important; }
 
+.avatar-inicio {
+  display: block;
+  width: 150px;
+  height: 150px; }
+
 .d-fac {
   display: flex;
   align-items: center; }
@@ -517,5 +522,11 @@ input[type=textarea]:not(.browser_default):focus:not([readonly]) + label {
   .experiencia-data p {
     margin: 0;
     padding: 0; }
+
+#comentarios-load {
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out; }
 
 /*# sourceMappingURL=lecxa_admin.css.map */
